--- a/index.html
+++ b/index.html
@@ -125,6 +125,333 @@
                 feedback: "In the context of meditation, 'pīti' refers to rapture or refreshment, an uplifting quality of experience."
             },
             // ... Add more questions here from the previous list ...
+              // Chapter 1: Breathing is Life
+  {
+    question: "What does Ajahn Sucitto mean by 'pāṇa' in relation to breathing?",
+    options: [
+      "The physical act of inhaling and exhaling",
+      "The energy associated with breathing",
+      "The sound of the breath",
+      "The duration of each breath"
+    ],
+    correctAnswers: [1],
+    feedback: "Ajahn Sucitto refers to 'pāṇa' as the energy, rather than the physical sensations, associated with breathing."
+  },
+  {
+    question: "According to the book, why is focusing on breath energy beneficial?",
+    options: [
+      "It helps count breaths more accurately",
+      "It connects the material to the mental realm",
+      "It makes breathing louder and more noticeable",
+      "It increases lung capacity"
+    ],
+    correctAnswers: [1],
+    feedback: "Focusing on breath energy is beneficial because it connects the material (physical) to the mental realm, affecting the entire nervous system."
+  },
+  {
+    question: "What does the author suggest about the relationship between breathing and emotions?",
+    options: [
+      "Emotions have no effect on breathing",
+      "Breathing only affects physical sensations",
+      "Breath energy can influence and be influenced by emotional states",
+      "Emotions and breathing are completely separate processes"
+    ],
+    correctAnswers: [2],
+    feedback: "The author suggests that breath energy can both influence and be influenced by emotional states, creating a connection between breathing and emotions."
+  },
+
+  // Chapter 2: Guided by the Buddha's View
+  {
+    question: "How does the book describe the structure of the sixteen instructions in ānāpānasati?",
+    options: [
+      "As a single continuous process",
+      "As four separate 'tetrads'",
+      "As sixteen independent steps",
+      "As two main sections"
+    ],
+    correctAnswers: [1],
+    feedback: "The sixteen instructions in ānāpānasati are described as being structured in four separate 'tetrads' or clusters of four instructions each."
+  },
+  {
+    question: "What are the four tetrads mentioned in the ānāpānasati instructions?",
+    options: [
+      "Body, Mind, Spirit, Soul",
+      "Inhalation, Exhalation, Retention, Release",
+      "Body, Feeling, Mind/Heart, Dhammā",
+      "Past, Present, Future, Timelessness"
+    ],
+    correctAnswers: [2],
+    feedback: "The four tetrads mentioned in the ānāpānasati instructions are Body, Feeling, Mind/Heart, and Dhammā."
+  },
+  {
+    question: "According to the book, how do samatha and vipassanā relate in the practice of ānāpānasati?",
+    options: [
+      "They are completely separate practices",
+      "Samatha always precedes vipassanā",
+      "Vipassanā always precedes samatha",
+      "They are practiced in tandem and interplay with each other"
+    ],
+    correctAnswers: [3],
+    feedback: "The book suggests that samatha and vipassanā are practiced in tandem and interplay with each other, rather than being strictly sequential or separate practices."
+  },
+
+  // Chapter 3: Touching Your Ground
+  {
+    question: "What does Ajahn Sucitto emphasize about the environment for meditation practice?",
+    options: [
+      "It should always be indoors",
+      "It must be completely silent",
+      "It should be free from clutter and distractions",
+      "It requires specific meditation equipment"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto emphasizes that the environment for meditation practice should be free from clutter and distractions, ideally a quiet and natural place."
+  },
+  {
+    question: "How does the book suggest dealing with thoughts and concerns during meditation?",
+    options: [
+      "Forcefully push them away",
+      "Engage with them fully",
+      "Note them and put aside what's not necessary to deal with at this time",
+      "Immediately stop meditating if thoughts arise"
+    ],
+    correctAnswers: [2],
+    feedback: "The book suggests noting thoughts and concerns, and putting aside what's not necessary to deal with at the time of meditation."
+  },
+  {
+    question: "What aspect of body awareness does Ajahn Sucitto emphasize for grounding?",
+    options: [
+      "Visual appearance of the body",
+      "Weight of the body",
+      "The felt impression of resting down through the base of the body",
+      "The sound of the heartbeat"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto emphasizes the felt impression of resting down through the base of the body as a key aspect for grounding in body awareness."
+  },
+
+  // Chapter 4: Right Mindfulness Needs Right View
+  {
+    question: "According to the book, what is the relationship between right view and right mindfulness?",
+    options: [
+      "They are unrelated practices",
+      "Right view comes after establishing right mindfulness",
+      "Right mindfulness is guided by right view",
+      "Right view replaces the need for mindfulness"
+    ],
+    correctAnswers: [2],
+    feedback: "The book emphasizes that right mindfulness is guided by right view, suggesting that our understanding (view) shapes how we practice mindfulness."
+  },
+  {
+    question: "What does Ajahn Sucitto say about the role of thinking in mindfulness practice?",
+    options: [
+      "All thinking should be suppressed",
+      "Only positive thoughts are allowed",
+      "Thinking is used reflectively to arrive at skilful meaning",
+      "Thinking should be random and unfocused"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto suggests that thinking is used reflectively in mindfulness practice to arrive at skilful meaning, rather than being suppressed entirely."
+  },
+  {
+    question: "How does the book describe the relationship between right effort and right mindfulness?",
+    options: [
+      "They are opposing practices",
+      "Right effort is not necessary for mindfulness",
+      "Right effort develops out of right view and supports right mindfulness",
+      "Mindfulness replaces the need for effort"
+    ],
+    correctAnswers: [2],
+    feedback: "The book describes right effort as developing out of right view and attitude, and then supporting the establishment of right mindfulness."
+  },
+
+  // Chapter 5: Direct Knowing
+  {
+    question: "What does 'pajānāti' (directly knowing) refer to in the context of meditation?",
+    options: [
+      "Intellectual understanding of concepts",
+      "Non-conceptual and sensitive clarity",
+      "Memorization of Buddhist teachings",
+      "Ability to explain meditation techniques to others"
+    ],
+    correctAnswers: [1],
+    feedback: "In the context of meditation, 'pajānāti' refers to direct knowing, which is a non-conceptual and sensitive clarity, rather than intellectual understanding."
+  },
+  {
+    question: "How does Ajahn Sucitto distinguish between 'manas' and 'citta'?",
+    options: [
+      "They are synonyms for the same concept",
+      "Manas is emotional while citta is logical",
+      "Manas creates mental objects while citta provides subjective reference",
+      "Citta is always negative while manas is positive"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto distinguishes manas as the faculty that creates mental objects, while citta provides subjective reference and is the seat of impulses, emotions, and aspirations."
+  },
+  {
+    question: "What practice does the book recommend for balancing conceptual and embodied intelligence?",
+    options: [
+      "Focusing solely on abstract thoughts",
+      "Ignoring bodily sensations completely",
+      "Using questions about direct experience to connect manas to embodied experience",
+      "Separating mental and physical experiences entirely"
+    ],
+    correctAnswers: [2],
+    feedback: "The book recommends using questions about direct experience to connect manas (conceptual mind) to embodied experience, balancing these two aspects of intelligence."
+  },
+
+  // Chapter 6: Get to the Point
+  {
+    question: "What does Ajahn Sucitto suggest about focusing on a particular point in the body during meditation?",
+    options: [
+      "It's essential to always focus on the nose tip",
+      "A specific point of focus is not emphasized in the original teachings",
+      "The point of focus should change with each breath",
+      "Only the abdomen should be used as a focal point"
+    ],
+    correctAnswers: [1],
+    feedback: "Ajahn Sucitto points out that the Buddha didn't leave specific instructions to focus on a particular point in the body, suggesting this is not emphasized in the original teachings."
+  },
+  {
+    question: "How does the book describe 'samādhi' in relation to concentration?",
+    options: [
+      "Samādhi is forceful concentration on a single point",
+      "Samādhi and concentration are unrelated",
+      "Samādhi is a state the mind enters as it settles and feels at ease",
+      "Samādhi requires constant mental effort"
+    ],
+    correctAnswers: [2],
+    feedback: "The book describes samādhi not as forceful concentration, but as a state the mind enters as it settles down and feels at ease."
+  },
+  {
+    question: "What does Ajahn Sucitto suggest about the term 'ekaggatā' often translated as 'one-pointedness'?",
+    options: [
+      "It refers to a microscopic focus on a physical point",
+      "It means eliminating all thoughts",
+      "It refers to a purposeful and settled mode of awareness",
+      "It's about rapidly shifting attention between multiple points"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto suggests that 'ekaggatā' refers to a purposeful and settled mode of awareness, rather than a microscopic focus on a physical point."
+  },
+
+  // Chapter 7: Training the Mind with the Body
+  {
+    question: "How does the book describe 'kāyasaṅkhāra' (bodily formation)?",
+    options: [
+      "The physical structure of the body",
+      "The process of building muscle",
+      "The weave of energies that sustains and moderates the body",
+      "The act of physical exercise"
+    ],
+    correctAnswers: [2],
+    feedback: "The book describes 'kāyasaṅkhāra' as the weave of energies that sustains and moderates the workings of the body."
+  },
+  {
+    question: "According to Ajahn Sucitto, how does working with bodily formation relate to mental states?",
+    options: [
+      "It has no effect on mental states",
+      "It only affects physical relaxation",
+      "It can help release and resolve emotional and psychological patterns",
+      "It replaces the need for mental cultivation"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto suggests that working with bodily formation (kāyasaṅkhāra) can help release and resolve emotional and psychological patterns stored in the body."
+  },
+  {
+    question: "What approach does the book recommend for dealing with bodily restrictions during meditation?",
+    options: [
+      "Forcefully push through any discomfort",
+      "Immediately stop meditating if restrictions are felt",
+      "Widen awareness over restrictions and connect them to non-restricted areas",
+      "Ignore any bodily sensations entirely"
+    ],
+    correctAnswers: [2],
+    feedback: "The book recommends widening awareness over restrictions and connecting them to non-restricted areas of the body, rather than forcing or ignoring them."
+  },
+
+  // Chapter 8: Hindrances
+  {
+    question: "What are the five hindrances mentioned in the book?",
+    options: [
+      "Greed, hatred, delusion, ignorance, and doubt",
+      "Sense-desire, ill-will, sloth and torpor, restlessness and remorse, and doubt",
+      "Attachment, aversion, sleepiness, excitement, and confusion",
+      "Craving, anger, laziness, worry, and skepticism"
+    ],
+    correctAnswers: [1],
+    feedback: "The five hindrances mentioned are sense-desire, ill-will, sloth and torpor (mental stiffness and lethargy), restlessness and remorse, and doubt."
+  },
+  {
+    question: "How does Ajahn Sucitto suggest working with hindrances in meditation?",
+    options: [
+      "Forcefully suppress them",
+      "Fully engage with their content",
+      "Acknowledge them and use the breath to moderate their energy",
+      "Ignore them completely"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto suggests acknowledging hindrances and using the breath to moderate their energy, rather than suppressing or fully engaging with them."
+  },
+  {
+    question: "What role does the body play in dealing with hindrances, according to the book?",
+    options: [
+      "The body is irrelevant to mental hindrances",
+      "Physical exercise is the best way to overcome hindrances",
+      "The body can be used as a resource to ground and steady awareness",
+      "Hindrances only affect the mind, not the body"
+    ],
+    correctAnswers: [2],
+    feedback: "The book emphasizes that the body can be used as a resource to ground and steady awareness when dealing with hindrances."
+  },
+
+  // Chapter 9: Insight: Embodied Freedom
+  {
+    question: "What is the main focus of insight practice according to the book?",
+    options: [
+      "Achieving altered states of consciousness",
+      "Memorizing Buddhist scriptures",
+      "Witnessing the changeable nature of experience",
+      "Developing psychic powers"
+    ],
+    correctAnswers: [2],
+    feedback: "The book emphasizes that insight practice focuses on witnessing the changeable (anicca) nature of experience."
+  },
+  {
+    question: "How does Ajahn Sucitto describe the relationship between insight and dispassion?",
+    options: [
+      "They are unrelated practices",
+      "Insight leads to increased passion",
+      "Dispassion is a prerequisite for insight",
+      "Insight naturally leads to dispassion"
+    ],
+    correctAnswers: [3],
+    feedback: "Ajahn Sucitto describes insight as naturally leading to dispassion (virāga) as one sees the changeable nature of phenomena."
+  },
+  {
+    question: "What does the book suggest about the perception of 'self' in relation to bodily experience?",
+    options: [
+      "The self is a fixed, unchanging entity",
+      "Bodily experience has no relation to the sense of self",
+      "Insight reveals the body as a flow of changeable factors, challenging fixed self-view",
+      "Self-perception should be strengthened through bodily awareness"
+    ],
+    correctAnswers: [2],
+    feedback: "The book suggests that insight reveals the body as a flow of changeable factors, challenging the perception of a fixed self."
+  },
+
+  // Chapter 10: Rapture and Ease
+  {
+    question: "What does Ajahn Sucitto mean by 'pīti' in the context of meditation?",
+    options: [
+      "Physical pain",
+      "Mental confusion",
+      "Rapture or refreshment",
+      "Sleepiness"
+    ],
+    correctAnswers: [2],
+    feedback: "In the context of meditation, 'pīti' refers to rapture or refreshment, an uplifting quality of experience."
+  },
         ];
 
         function shuffleArray(array) {
