--- a/index.html
+++ b/index.html
@@ -452,6 +452,433 @@
     correctAnswers: [2],
     feedback: "In the context of meditation, 'pīti' refers to rapture or refreshment, an uplifting quality of experience."
   },
+              {
+    question: "How does the book describe the relationship between 'pīti' (rapture) and 'sukha' (ease)?",
+    options: [
+      "They are opposing experiences",
+      "Pīti always precedes sukha",
+      "Sukha always precedes pīti",
+      "They are paired experiences, with sukha being steadier than pīti"
+    ],
+    correctAnswers: [3],
+    feedback: "The book describes pīti and sukha as paired experiences, with sukha (ease) being steadier and more comfortable than the more energetic pīti (rapture)."
+  },
+  {
+    question: "According to Ajahn Sucitto, what is the basis of concentration (samādhi)?",
+    options: [
+      "Intense mental effort",
+      "Suppression of all thoughts",
+      "Physical stillness",
+      "Pleasure and harmony"
+    ],
+    correctAnswers: [3],
+    feedback: "Ajahn Sucitto emphasizes that concentration (samādhi) is based on pleasure and harmony, rather than forceful effort or suppression."
+  },
+
+  // Chapter 11: Saṅkhāra
+  {
+    question: "How does the book define 'saṅkhāra'?",
+    options: [
+      "Physical sensations only",
+      "Thoughts and memories",
+      "Formative energies or programs that steer experience",
+      "External environmental factors"
+    ],
+    correctAnswers: [2],
+    feedback: "The book defines 'saṅkhāra' as formative energies or programs that steer our experience and responses."
+  },
+  {
+    question: "What are the three types of saṅkhāra mentioned in the text?",
+    options: [
+      "Past, present, future",
+      "Body, speech, mind",
+      "Positive, negative, neutral",
+      "Kāyasaṅkhāra, vacīsaṅkhāra, cittasaṅkhāra"
+    ],
+    correctAnswers: [3],
+    feedback: "The three types of saṅkhāra mentioned are kāyasaṅkhāra (bodily formation), vacīsaṅkhāra (verbal formation), and cittasaṅkhāra (mental formation)."
+  },
+  {
+    question: "According to the book, how can one work with saṅkhāra in meditation?",
+    options: [
+      "By forcefully suppressing them",
+      "By ignoring them completely",
+      "By steadying and cooling them through mindful awareness",
+      "By intellectually analyzing their origins"
+    ],
+    correctAnswers: [2],
+    feedback: "The book suggests working with saṅkhāra by steadying and cooling them through mindful awareness, rather than suppressing or ignoring them."
+  },
+
+  // Chapter 12: Emotional Equilibrium
+  {
+    question: "How does Ajahn Sucitto describe 'cittasaṅkhāra' (mental formation)?",
+    options: [
+      "Only as thoughts and ideas",
+      "As physical sensations in the body",
+      "As perception and feeling, and the heart's volitional formation",
+      "As external stimuli affecting the mind"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto describes 'cittasaṅkhāra' as perception and feeling, and the heart's volitional formation, emphasizing its role in shaping mental states."
+  },
+  {
+    question: "What approach does the book recommend for working with emotions in meditation?",
+    options: [
+      "Suppressing all emotional responses",
+      "Fully engaging with and expressing emotions",
+      "Observing emotions with mindful awareness and equanimity",
+      "Intellectually analyzing the causes of emotions"
+    ],
+    correctAnswers: [2],
+    feedback: "The book recommends observing emotions with mindful awareness and equanimity, neither suppressing nor fully engaging with them."
+  },
+  {
+    question: "What role do 'nimittā' (signs) play in the development of concentration, according to the text?",
+    options: [
+      "They are irrelevant to meditation practice",
+      "They are distractions to be avoided",
+      "They can be helpful indicators of deepening meditation",
+      "They are the ultimate goal of practice"
+    ],
+    correctAnswers: [2],
+    feedback: "The book suggests that 'nimittā' can be helpful indicators of deepening meditation, but cautions against becoming attached to or fascinated by them."
+  },
+
+  // Chapter 13: The Web, the Weave and the Way
+  {
+    question: "How does Ajahn Sucitto describe the Buddha's realization about experience?",
+    options: [
+      "As a fixed, unchanging reality",
+      "As an ever-shifting play of conditioned forces and forms",
+      "As purely mental phenomena with no physical basis",
+      "As completely random and meaningless"
+    ],
+    correctAnswers: [1],
+    feedback: "Ajahn Sucitto describes the Buddha's realization of experience as an ever-shifting and interactive play of conditioned forces and forms."
+  },
+  {
+    question: "What does the book say about the relationship between consciousness (viññāṇa) and form (rūpa)?",
+    options: [
+      "They are completely separate and unrelated",
+      "Consciousness creates form",
+      "Form creates consciousness",
+      "They are interdependent and condition each other"
+    ],
+    correctAnswers: [3],
+    feedback: "The book emphasizes that consciousness (viññāṇa) and form (rūpa) are interdependent and condition each other, forming a weave of experience."
+  },
+  {
+    question: "What are 'āsavā' according to the text?",
+    options: [
+      "Positive mental states",
+      "Physical sensations",
+      "Outflows or corruptions that bind the heart",
+      "Meditation techniques"
+    ],
+    correctAnswers: [2],
+    feedback: "The book describes 'āsavā' as outflows or corruptions that bind the heart, such as sense-desire, becoming, and ignorance."
+  },
+
+  // Chapter 14: Insight: Deconstructing Reactions and Habits
+  {
+    question: "What does Ajahn Sucitto suggest about the nature of thoughts and emotions?",
+    options: [
+      "They are solid, unchanging entities",
+      "They are random occurrences with no cause",
+      "They are conditioned energies that form and dissipate",
+      "They should be completely eliminated in meditation"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto suggests that thoughts and emotions are conditioned energies that form and dissipate, rather than solid entities or random occurrences."
+  },
+  {
+    question: "How does the book describe the process of insight in relation to the 'self'?",
+    options: [
+      "Strengthening the sense of self",
+      "Completely annihilating the self",
+      "Seeing through the construction of 'self' as a process rather than an entity",
+      "Ignoring the concept of self entirely"
+    ],
+    correctAnswers: [2],
+    feedback: "The book describes insight as a process of seeing through the construction of 'self' as a process rather than a fixed entity."
+  },
+  {
+    question: "What role does samādhi play in insight practice, according to the text?",
+    options: [
+      "It is unnecessary for insight",
+      "It provides a stable base for witnessing phenomena clearly",
+      "It replaces the need for insight",
+      "It is only used for relaxation"
+    ],
+    correctAnswers: [1],
+    feedback: "The book emphasizes that samādhi provides a stable base for witnessing phenomena clearly, supporting insight practice."
+  },
+
+  // Chapter 15: Reflective Awareness
+  {
+    question: "How does Ajahn Sucitto describe 'citta' in relation to consciousness?",
+    options: [
+      "As identical to consciousness",
+      "As completely separate from consciousness",
+      "As the heart or core of consciousness that can be directed",
+      "As an obstacle to true consciousness"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto describes 'citta' as the heart or core of consciousness that can be directed, distinguishing it from passive consciousness (viññāṇa)."
+  },
+  {
+    question: "What does the book suggest about the nature of citta?",
+    options: [
+      "It is a fixed, unchanging entity",
+      "It is purely physical",
+      "It is capable of change and development",
+      "It is irrelevant to meditation practice"
+    ],
+    correctAnswers: [2],
+    feedback: "The book suggests that citta is capable of change and development, not a fixed entity or purely physical phenomenon."
+  },
+  {
+    question: "How does Ajahn Sucitto recommend working with citta in meditation?",
+    options: [
+      "By forcefully controlling it",
+      "By ignoring it completely",
+      "By attuning to its sensitivity and gladdening it",
+      "By analyzing it intellectually"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto recommends working with citta by attuning to its sensitivity and gladdening it, rather than forceful control or intellectual analysis."
+  },
+
+  // Chapter 16: Jhāna
+  {
+    question: "How does the book define 'jhāna'?",
+    options: [
+      "As a state of complete unconsciousness",
+      "As intense concentration on a single point",
+      "As a condition of refined agreeable and wholesome states",
+      "As a form of intellectual analysis"
+    ],
+    correctAnswers: [2],
+    feedback: "The book defines 'jhāna' as a condition of refined agreeable and wholesome states, where the mind's focus is unified and its activities are reduced."
+  },
+  {
+    question: "According to Ajahn Sucitto, what is the relationship between jhāna and insight?",
+    options: [
+      "Jhāna replaces the need for insight",
+      "Insight is impossible during jhāna",
+      "Jhāna can serve as a foundation for insight",
+      "Jhāna and insight are completely unrelated practices"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto suggests that jhāna can serve as a foundation for insight, providing a stable and clear state of mind for wisdom to arise."
+  },
+  {
+    question: "How does the book describe the progression through the four jhānas?",
+    options: [
+      "As increasing mental activity",
+      "As deepening relaxation only",
+      "As increasing sensory awareness",
+      "As progressive refinement and calming of mental factors"
+    ],
+    correctAnswers: [3],
+    feedback: "The book describes the progression through the four jhānas as a progressive refinement and calming of mental factors, with certain factors ceasing in each jhāna."
+  },
+
+  // Chapter 17: Liberating the Heart
+  {
+    question: "What does Ajahn Sucitto mean by 'steadying' the mind/heart?",
+    options: [
+      "Forcefully holding the mind still",
+      "Eliminating all thoughts",
+      "Establishing a stable, open awareness",
+      "Focusing intensely on a single object"
+    ],
+    correctAnswers: [2],
+    feedback: "By 'steadying' the mind/heart, Ajahn Sucitto refers to establishing a stable, open awareness rather than forceful control or elimination of thoughts."
+  },
+  {
+    question: "How does the book describe the process of 'releasing' the mind/heart?",
+    options: [
+      "As completely emptying the mind of all content",
+      "As strengthening the sense of self",
+      "As letting go of attachments and identifications",
+      "As intensifying concentration on pleasant states"
+    ],
+    correctAnswers: [2],
+    feedback: "The book describes 'releasing' the mind/heart as a process of letting go of attachments and identifications, not as emptying the mind or strengthening the self."
+  },
+  {
+    question: "What role does 'direct knowing' play in liberating the heart, according to the text?",
+    options: [
+      "It is irrelevant to liberation",
+      "It replaces the need for meditation practice",
+      "It allows for clear seeing of mental states without identification",
+      "It increases intellectual understanding only"
+    ],
+    correctAnswers: [2],
+    feedback: "The book emphasizes that 'direct knowing' allows for clear seeing of mental states without identification, supporting the process of liberation."
+  },
+
+  // Chapter 18: Insight: Maturing into Relinquishment
+  {
+    question: "What does Ajahn Sucitto say about the importance of focusing on changeability (anicca)?",
+    options: [
+      "It's irrelevant to insight practice",
+      "It leads to pessimism and should be avoided",
+      "It's a key to developing dispassion and insight",
+      "It's only important for beginners"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto emphasizes that focusing on changeability (anicca) is key to developing dispassion and insight, as it reveals the impermanent nature of all phenomena."
+  },
+  {
+    question: "How does the book describe the relationship between insight and the sense of self?",
+    options: [
+      "Insight strengthens the sense of self",
+      "Insight has no effect on the sense of self",
+      "Insight reveals the constructed nature of the self",
+      "Insight creates a new, improved self"
+    ],
+    correctAnswers: [2],
+    feedback: "The book describes insight as revealing the constructed nature of the self, rather than strengthening it or creating a new self."
+  },
+  {
+    question: "What does Ajahn Sucitto mean by 'relinquishment' in the context of insight practice?",
+    options: [
+      "Giving up all possessions",
+      "Stopping all meditation practice",
+      "Letting go of attachments and identifications",
+      "Isolating oneself from others"
+    ],
+    correctAnswers: [2],
+    feedback: "In the context of insight practice, 'relinquishment' refers to letting go of attachments and identifications, not literal renunciation of possessions or relationships."
+  },
+
+  // Chapter 19: Great Fruit
+  {
+    question: "What does Ajahn Sucitto describe as the 'great fruit' of mindfulness of breathing?",
+    options: [
+      "Physical health benefits only",
+      "Improved concentration for worldly tasks",
+      "Liberation of the heart from suffering",
+      "Developing psychic powers"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto describes the 'great fruit' of mindfulness of breathing as the liberation of the heart from suffering, fear, depression, and bitterness."
+  },
+  {
+    question: "How many factors of awakening are mentioned in the book?",
+    options: [
+      "Four",
+      "Five",
+      "Six",
+      "Seven"
+    ],
+    correctAnswers: [3],
+    feedback: "The book mentions seven factors of awakening: mindfulness, investigation of phenomena, energy, rapture, tranquility, concentration, and equanimity."
+  },
+  {
+    question: "What role does mindfulness play in the development of insight, according to the text?",
+    options: [
+      "It's unnecessary for insight",
+      "It's a preliminary practice only",
+      "It's the key factor supporting all aspects of practice",
+      "It's only relevant for concentration practices"
+    ],
+    correctAnswers: [2],
+    feedback: "The book emphasizes mindfulness as the key factor supporting all aspects of practice, including the development of insight."
+  },
+     {
+    question: "What does Ajahn Sucitto mean by 'trusting embodiment' in meditation practice?",
+    options: [
+      "Focusing only on physical sensations",
+      "Ignoring the body completely",
+      "Centering awareness in how the body feels and senses itself",
+      "Analyzing the body intellectually"
+    ],
+    correctAnswers: [2],
+    feedback: "Ajahn Sucitto encourages 'trusting embodiment' by centering awareness in how the body feels and senses itself, rather than focusing solely on physical sensations or intellectual analysis."
+  },
+  {
+    question: "How does the book suggest working with hindrances in meditation?",
+    options: [
+      "Forcefully suppressing them",
+      "Ignoring them completely",
+      "Using them as an opportunity to learn and depersonalize experience",
+      "Fully engaging with their content"
+    ],
+    correctAnswers: [2],
+    feedback: "The book suggests working with hindrances as an opportunity to learn and depersonalize experience, rather than suppressing or fully engaging with them."
+  },
+  {
+    question: "What does Ajahn Sucitto mean by saying 'practice proceeds in accord with Dhamma'?",
+    options: [
+      "Only studying Buddhist scriptures",
+      "Following a strict set of rules",
+      "Allowing practice to unfold naturally, guided by wholesome qualities",
+      "Meditating for a set number of hours daily"
+    ],
+    correctAnswers: [2],
+    feedback: "By saying 'practice proceeds in accord with Dhamma', Ajahn Sucitto means allowing practice to unfold naturally, guided by wholesome qualities and understanding, rather than following rigid rules."
+  },
+
+  // General questions about the book's overall themes
+  {
+    question: "What is the main focus of Ajahn Sucitto's approach to mindfulness of breathing?",
+    options: [
+      "Counting breaths",
+      "Visualizing the breath",
+      "Attuning to the energy (pāṇa) associated with breathing",
+      "Controlling the breath"
+    ],
+    correctAnswers: [2],
+    feedback: "Throughout the book, Ajahn Sucitto emphasizes attuning to the energy (pāṇa) associated with breathing, rather than counting or controlling the breath."
+  },
+  {
+    question: "How does the book describe the relationship between samatha and vipassanā?",
+    options: [
+      "They are completely separate practices",
+      "Samatha always precedes vipassanā",
+      "Vipassanā always precedes samatha",
+      "They are complementary practices that work together"
+    ],
+    correctAnswers: [3],
+    feedback: "The book describes samatha and vipassanā as complementary practices that work together, rather than separate or strictly sequential practices."
+  },
+  {
+    question: "What role does the body play in Ajahn Sucitto's approach to meditation?",
+    options: [
+      "It's irrelevant to meditation practice",
+      "It's only important for beginners",
+      "It's a crucial foundation for all aspects of practice",
+      "It's only relevant for concentration practices"
+    ],
+    correctAnswers: [2],
+    feedback: "Throughout the book, Ajahn Sucitto emphasizes the body as a crucial foundation for all aspects of meditation practice, from establishing mindfulness to developing insight."
+  },
+  {
+    question: "How does the book describe the ultimate goal of mindfulness of breathing practice?",
+    options: [
+      "Achieving altered states of consciousness",
+      "Improving physical health",
+      "Liberating the heart from suffering",
+      "Developing psychic powers"
+    ],
+    correctAnswers: [2],
+    feedback: "The book consistently describes the ultimate goal of mindfulness of breathing practice as liberating the heart from suffering, rather than achieving specific states or powers."
+  },
+  {
+    question: "What is the significance of 'right view' in the practice of mindfulness of breathing, according to Ajahn Sucitto?",
+    options: [
+      "It's irrelevant to the practice",
+      "It's only important for beginners",
+      "It guides and informs all aspects of practice",
+      "It replaces the need for meditation"
+    ],
+    correctAnswers: [2],
+    feedback: "Throughout the book, Ajahn Sucitto emphasizes that right view guides and informs all aspects of practice, including how we approach mindfulness of breathing."
+  },       
         ];
 
         function shuffleArray(array) {
